<resources>
    <string name="app_name">Battery Optimizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button2text">Battery Manager</string>
    <string name="button1text">Optimize</string>
    <string name="button3text">Power Saver</string>
    <string name="button4text">Button 4</string>
    <string name="battery_temprature">Battery Temperature: </string>
    <string name="battery_health">Battery Health: </string>
    <string name="battery_voltage">Battery Voltage: </string>
    <string name="fab_settings">Settings</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="battery_manager">Battery Information</string>
    <string name="battery_stats">Battery Stats</string>
    <string name="charger_type">Charger Type:</string>
    <string name="charging_status">Charging Status:</string>
    <string name="battery_technology">Battery Technology:</string>
    <string name="battery_level">Battery Level:</string>
    <string name="battery_current">Charging Speed:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="max_capacity">Max Capacity: </string>
    <string name="total_ram">Total Memory</string>
    <string name="used_ram">Used Memory</string>
    <string name="available_memory">Available Memory</string>
    <string name="about">About</string>
    <string name="github">Github</string>
    <string name="aman_dewett">© Aman Dewett and Dilpreet Kaur</string>
    <string name="telegram">Email Developer</string>
</resources>
