<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".About">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/about_logo_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/about_logo"/>

        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_layout">
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_github"
            android:layout_below="@+id/version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/github"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_bright"
            android:clickable="true"
            android:focusable="true"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/contact"
            android:layout_below="@+id/text_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/telegram"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_bright"
            android:clickable="true"
            android:focusable="true"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_name"
            android:layout_below="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/aman_dewett"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>
</RelativeLayout>