<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <android.support.v7.widget.CardView
            android:id="@+id/current_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_current" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/current_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="1500" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/level_cardview"
            android:layout_below="@+id/current_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_level" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/level_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="100" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/temprature_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/level_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_temprature" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/temprature_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="25" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/health_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/temprature_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_health" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/health_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Good" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/voltage_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/health_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_voltage" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/voltage_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="5v" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/plugged_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/voltage_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/charger_type" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/plugged_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="USB" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/charging_status_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/plugged_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/charging_status" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/charging_status_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Full" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/technology_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/charging_status_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/battery_technology" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/technology_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Li-on" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/capacity_cardview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/technology_cardview"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="@drawable/ripple1"
            app:cardBackgroundColor="@color/float_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/max_capacity" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/capacity_value"
                    style="@style/BatteryStatsTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="0mAH" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>