<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    tools:context=".RamInformation">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/total_ram_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/float_color"
                android:foreground="@drawable/ripple1"
                android:clickable="true"
                android:elevation="8dp"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/total_ram_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/total_ram"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/total_ram_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="10dp"
                    android:text="4000 MB"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/used_ram_card"
                android:layout_below="@+id/total_ram_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/float_color"
                android:foreground="@drawable/ripple1"
                android:clickable="true"
                android:elevation="8dp"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/used_ram_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/used_ram"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/used_ram_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="10dp"
                    android:text="1500 MB"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/avail_ram_card"
                android:layout_below="@+id/used_ram_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/float_color"
                android:foreground="@drawable/ripple1"
                android:clickable="true"
                android:elevation="8dp"
                app:cardCornerRadius="10dp"
                android:focusable="true">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/avail_ram_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/available_memory"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/avail_ram_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="10dp"
                    android:text="1500 MB"
                    android:textColor="@color/batteryPercentText"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonrelative"
            android:layout_below="@+id/linearLayout1"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:padding="10dp"
            android:gravity="bottom|center_horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/button_optimize"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/float_color"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/button_text"
                        android:drawableStart="@drawable/ic_optimize"
                        android:text="@string/button1text"
                        android:textSize="30sp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
        </RelativeLayout>
</ScrollView>